crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__tikz_library_closed_brace.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\usepgflibrary{}\n               |\"#)"
---
[
  {
    "label": "arrows",
    "preselect": false
  },
  {
    "label": "arrows.meta",
    "preselect": false
  },
  {
    "label": "arrows.spaced",
    "preselect": false
  },
  {
    "label": "curvilinear",
    "preselect": false
  },
  {
    "label": "datavisualization.barcharts",
    "preselect": false
  }
]
